<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ViewCellsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp"
        android:background="@color/colorPrimaryLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_margin="10sp"
            android:background="@drawable/rounded_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cabinet_checkbox"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Cabinet"
                    android:textColor="#666666"/>

                <CheckBox
                    android:id="@+id/ht04_checkbox"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="HT04"
                    android:textColor="#666666"/>

                <CheckBox
                    android:id="@+id/ht05_checkbox"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="HT05"
                    android:textColor="#666666"/>

                <CheckBox
                    android:id="@+id/other_checkbox"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Other"
                    android:textColor="#666666"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/min_voltage_editText"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:text="@string/voltage_bounds"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/max_voltage_editText"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/min_capacity_editText"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:text="@string/capacity_bounds"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/max_capacity_editText"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_weight="0"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/min_ir_editText"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="130sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:text="@string/ir_bounds"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/max_ir_editText"
                    android:layout_width="80sp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="numberDecimal"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="10sp"
            android:layout_weight="1"
            android:background="@drawable/rounded_background"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/tableLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="10dip">
                </TableLayout>

            </LinearLayout>

            ...

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>